changed handletagclick function so it adds a new tag to the array on click

--- a/src/styles/MovieReview.module.css
+++ b/src/styles/MovieReview.module.css
@@ -25,6 +25,9 @@
 .tags {
   font-weight: bold;
   font-size: 13px;
+  display: flex;
+  justify-content: space-around;
+  gap: 10px;
 }
 
 .author {
