--- a/src/styles/ReviewList.module.css
+++ b/src/styles/ReviewList.module.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
+  gap: 20px;
   width: 100vw;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
