--- a/src/styles/ReviewList.module.css
+++ b/src/styles/ReviewList.module.css
@@ -5,6 +5,6 @@
   align-items: center;
   justify-content: center;
   gap: 20px;
-  width: 100vw;
+  width: 100%;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
