--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -3,21 +3,18 @@
   display: flex;
   justify-content: space-between;
   padding: 10px 40px;
-}
-.logo {
-  color: white;
-  text-decoration: none;
+  border: 1px solid white;
 }
 
 .links ul {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   list-style-type: none;
-  gap: 20px;
+  gap: 50px;
   padding: 10px 40px;
 }
+
 .link {
   color: white;
-  text-decoration: none;
   font-size: 20px;
 }
